--- a/index.html
+++ b/index.html
@@ -44,20 +44,17 @@
 
             <!-- Microformats! -->
 
-            <h1 class="fn">C'thulhu</h1>
+            <h1 class="fn">Christopher Moussa</h1>
 
             <p>
-                Cell: <span class="tel">555-666-7777</span><br />
-                Email: <a class="email" href="mailto:greatoldone@lovecraft.com">greatoldone@lovecraft.com</a>
+                <!-- Cell: <span class="tel">555-666-7777</span><br /> -->
+                Email: <a class="email" href="mailto:christopher.moussa97@gmail.com">christopher.moussa97@gmail.com</a>
             </p>
         </div>
 
         <div id="objective">
             <p>
-                I am an outgoing and energetic (ask anybody) young professional, seeking a
-                career that fits my professional skills, personality, and murderous tendencies.
-                My squid-like head is a masterful problem solver and inspires fear in who gaze upon it.
-                I can bring world domination to your organization.
+                Avid baseballer. Below average video gamer. Software Developer at Lawrence Livermore National Laboratory. 
             </p>
         </div>
 
