--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
             <p>
                 <!-- Cell: <span class="tel">555-666-7777</span><br /> -->
+                <br/>
                 Email: <a class="email" href="mailto:christopher.moussa97@gmail.com">christopher.moussa97@gmail.com</a>
             </p>
         </div>
@@ -64,9 +65,9 @@
             <dd class="clear"></dd>
             <dt>Education</dt>
             <dd>
-                <h2><strong>Withering Madness University</strong> Planet Vhoorl</h2>
-                <p><strong>Major:</strong> Public Relations<br />
-                   <strong>Minor:</strong> Scale Tending</p>
+                <h2><strong>San Diego State University</strong> San Diego, California</h2>
+                <p><strong>Major:</strong> Computer Science<br />
+                        Magna Cum Laude</p>
             </dd>
 
             <dd class="clear"></dd>
