--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
             <dd class="clear"></dd>
             <dt>Education</dt>
             <dd>
-                <h2><strong>San Diego State University</strong> San Diego, California</h2>
-                <p><strong>Major:</strong> Computer Science<br />
-                        Magna Cum Laude</p>
+                <h2><strong>San Diego State University</strong>San Diego, CA</h2>
+                <ul>
+                    <li>B.S. Computer Science: 3.66/4.0<span>May 2019</span></li>
+                    <ul class="inset"><li>Magna Cum Laude</li></ul>
+                </ul>
             </dd>
 
             <dd class="clear"></dd>
