--- a/index.html
+++ b/index.html
@@ -1,38 +1,56 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-     <title>One Page Resume</title>
-     <link rel="stylesheet" href="octicons/octicons.css">
-     <style type="text/css">
+    <title>Christopher Moussa's Resume</title>
+    <link rel="stylesheet" href="fontfacekits/Aller-fontfacekit/stylesheet-linkedstyles.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="fontfacekits/PT-Sans-fontfacekit/stylesheet-ls.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="stylesheets/print.css" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:400,900,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="octicons/octicons.css">
+    <style type="text/css">
         * { margin: 0; padding: 0; }
-        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; }
+        body { font: 12px "Playfair Display", serif; line-height: 18px; }
         .clear { clear: both; }
-        #page-wrap { width: 800px; margin: 40px auto 60px; }
+        #page-wrap { width: 700px; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
-        h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
-        h2 { font-size: 18px; position: relative; font-weight: 300; }
-        h2 strong {font-size: 20px; padding: 0 5px 0 0; }
-        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
+        h1 { margin: 0 0 16px 0; padding: 16px 0 16px 0; font-size: 36px; font-family: "Playfair Display SC", serif; font-weight: bold; border-bottom: 1px solid #999; }
+        h2 { font-size: 12px; font-family: "Playfair Display", serif; font-weight: normal; position: relative; }
+        h2 strong { font-size: 16px; font-family: "Playfair Display"; padding: 0 10px 0 0; }
+        h2 span { position: absolute; margin: 0 5px 0 0; top: 0; right: 0; text-align: right; font-family: "Playfair Display", Georgia, Serif; font-size: 12px; color: #999; font-weight: normal; }
+        p { position: relative; }
+        p.floating { position: relative; margin: -60px 5px 0 0; text-align: right; float: right; font-size: 12px; font-family: "Playfair Display"; }
+        p span { position: absolute; margin: 0 5px 0 0; top: 0; right: 0; font-family: "Playfair Display", Georgia, Serif; font-size: 12px; font-weight: normal; }
         a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
         a:hover { border-bottom-style: solid; color: black; }
-        ul { margin: 0 0 0 17px; }
-        #objective { width: 500px; float: left; }
-        #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
-        dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; width: 75px; float: left; }
-        dd { width: 650px; float: right; border-left: 1px solid #999; padding: 0 0 0 26px; }
-        dd.clear { float: none; margin: 0; height: 15px; border-left: none; }
-        .smartmargin { margin: 10px 0 0 0; }
-     </style>
+        ul { margin: 0 0 0 18px; }
+        ul li { position: relaitive; }
+        ul li span { text-align: right; float: right; padding: 0 5px 0 0; color: #999; }
+        ul.inset { list-style: none; margin: -2px 0 0 14px; }
+        ol { margin: 0 0 0 18px; }
+        ol li { position: relaitive; }
+        ol li span { text-align: right; float: right; padding: 0 5px 0 0; color: #999; }
+        ol.inset { list-style: none; margin: -2px 0 0 14px; }
+        /* ul li span { position: absolute; bottom: 0; right: 0; font-style: italic; } */
+        #objective { width: 700px; float: left; }
+        #objective p { font-family: "Playfair Display", Serif; font-style: italic; font-size: 12px; }
+        dt { font-weight: bold; font-family: "Playfair Display"; font-size: 14px; text-align: center; width: 75px; float: left; }
+        dd { width: 575px; float: right; border-left: 1px solid #999; padding: 0 0 0 26px; }
+        dd.clear { float: none; margin: 0; height: 20px; border-left: none; }
+        .smartmargin { margin: 8px 0 0 0; }
+    </style>
 
-     <style type="text/css" media="print">
-       .noprint { display: none; }
-     </style>
+    <style type="text/css" media="print">
+        .noprint { display: none; }
+    </style>
 </head>
+
 
 <body>
 
