--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         ol li span { text-align: right: -130px; float: right; padding: 0 5px 0 0; color: #999; }
         ol.inset { list-style: none; margin: -2px 0 0 14px; }
         /* ul li span { position: absolute; bottom: 0; right: 0; font-style: italic; } */
-        #objective { width: 700px; float: left; }
-        #objective p { font-family: "Trebuchet MS", Serif; font-style: italic; font-size: 12px; }
+        #objective { width: 375px; float: left; }
+        #objective p { font-family: "Trebuchet MS", Serif; font-style: italic; font-size: 14px; }
         dt { font-weight: bold; font-family: "Trebuchet MS"; font-size: 14px; text-align: center; width: 75px; float: left; }
         dd { width: 575px; float: right; border-left: 1px solid #999; padding: 0 0 0 26px; }
         dd.clear { float: none; margin: 0; height: 20px; border-left: none; }
@@ -60,7 +60,9 @@
 
     <div id="page-wrap">
 
-        <!-- <img src="images/cthulu.png" alt="Photo of Cthulu" id="pic" /> -->
+        <a href="https://www.instagram.com/christopher.moussa/?hl=en">
+            <img style="max-width: 30%; max-height: 30%;" src="images/profile_picture.jpg" alt="Profile Picture" id="pic" />
+        </a>
 
         <div id="contact-info" class="vcard">
 
@@ -87,9 +89,9 @@
             <dd class="clear"></dd>
             <dt>Education</dt>
             <dd>
-                <h2><strong>San Diego State University</strong>San Diego, CA</h2>
+                <h2 class="smartmargin"><strong>San Diego State University</strong>San Diego, CA <span>May 2019</span></h2>
                 <ul>
-                    <li>B.S. Computer Science: 3.7/4.0<span>May 2019</span></li>
+                    <li>B.S. Computer Science: 3.7/4.0</li>
                     <ul class="inset"><li>Magna Cum Laude</li></ul>
                 </ul>
             </dd>
