Added links to GitHub, LinkedIn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         body { 
             font: 12px "Trebuchet MS", serif; 
             line-height: 18px;
-            background-image: #abb3d9;
+            background-image: linear-gradient(#dbe8ff, white);
         }
         .clear { clear: both; }
         #page-wrap { width: 700px; margin: 40px auto 60px; }
@@ -61,7 +61,7 @@
     <div id="page-wrap">
 
         <a href="https://www.instagram.com/christopher.moussa/?hl=en">
-            <img style="max-width: 30%; max-height: 30%;" src="images/profile_picture.jpg" alt="Profile Picture" id="pic" />
+            <img style="max-width: 30%; max-height: 30%;" src="images/profile_picture.jpg" alt="Profile Picture" id="pic" border="5"/>
         </a>
 
         <div id="contact-info" class="vcard">
@@ -184,6 +184,15 @@
                     <strong>United States Army National Scholar-Athlete Award</strong>
                     <span>May 2015</span>
                 </h2>
+            </dd>
+
+            <dd class="clear"></dd>
+
+            <dt>Links</dt>
+            <dd class="noprint">
+                <a href="https://github.com/cmoussa1"><span class="octicon octicon-mark-github" style="position: relative; color: black; margin: 3px;"></span>Find Me on GitHub</a>
+                
+                <a href="https://www.linkedin.com/in/christopher-moussa-b2b73a132/"><i class="fab fa-linkedin-in"></i>LinkedIn Profile</a>
             </dd>
 
             <dd class="clear"></dd>
