updated update date

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="octicons/octicons.css">
     <style type="text/css">
         * { margin: 0; padding: 0; }
-        body { 
-            font: 12px "Trebuchet MS", serif; 
+        body {
+            font: 12px "Trebuchet MS", serif;
             line-height: 18px;
             background-image: linear-gradient(#dbe8ff, white);
         }
@@ -79,7 +79,7 @@
 
         <div id="objective">
             <p>
-                Avid baseballer. Below average video gamer. Software Developer at Lawrence Livermore National Laboratory. 
+                Avid baseballer. Below average video gamer. Software Developer at Lawrence Livermore National Laboratory.
             </p>
         </div>
 
@@ -191,7 +191,7 @@
             <dt>Links</dt>
             <dd class="noprint">
                 <a href="https://github.com/cmoussa1"><span class="octicon octicon-mark-github" style="position: relative; color: black; margin: 3px;"></span>Find Me on GitHub</a>
-                
+
                 <a href="https://www.linkedin.com/in/christopher-moussa-b2b73a132/"><i class="fab fa-linkedin-in"></i>LinkedIn Profile</a>
             </dd>
 
@@ -200,7 +200,7 @@
 
         <div class="clear"></div>
 
-        <p class="noprint">Last Updated: July 23rd, 2019</p>
+        <p class="noprint">Last Updated: July 31st, 2019</p>
     </div>
 
 </body>
