Added current job

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <!-- Cell: <span class="tel">555-666-7777</span><br /> -->
                 <br/>
                 Email: <a class="email" href="mailto:christopher.moussa97@gmail.com">christopher.moussa97@gmail.com</a>
+                <br>
             </p>
         </div>
 
@@ -99,6 +100,8 @@
             <dd class="clear"></dd>
             <dt> Technical Experience</dt>
             <dd>
+                <h2><strong>Software Developer</strong>Lawrence Livermore National Laboratory <span>July 2019&ndash;Present</span></h2>
+
                 <h2><strong>Software Engineer Intern</strong>Lawrence Livermore National Laboratory <span>June 2018&ndash;August 2018</span></h2>
                 <ul>
                     <li>Implemented a hostlist-management command-line tool in Python </li>
