Added current job

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <dd class="clear"></dd>
             <dt> Technical Experience</dt>
             <dd>
-                <h2><strong>Software Developer</strong>Lawrence Livermore National Laboratory <span>July 2019&ndash;Present</span></h2>
+                <h2 class="smartmargin"><strong>Software Developer</strong>Lawrence Livermore National Laboratory <span>July 2019&ndash;Present</span></h2>
 
-                <h2><strong>Software Engineer Intern</strong>Lawrence Livermore National Laboratory <span>June 2018&ndash;August 2018</span></h2>
+                <h2 class="smartmargin"><strong>Software Engineer Intern</strong>Lawrence Livermore National Laboratory <span>June 2018&ndash;August 2018</span></h2>
                 <ul>
                     <li>Implemented a hostlist-management command-line tool in Python </li>
                     <li>Created a project structure for the command-line tool on GitHub and incorporated collaborative tools such as Travis Continuous Integration, Code Coverage, and ReadTheDocs</li>
