repo: update web page, add thesis paper

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         body {
             font: 12px "Trebuchet MS", serif;
             line-height: 18px;
-            background-image: linear-gradient(#dbe8ff, white);
+            background-image: linear-gradient(#f89437, white);
         }
         .clear { clear: both; }
         #page-wrap { width: 700px; margin: 40px auto 60px; }
@@ -61,7 +61,7 @@
     <div id="page-wrap">
 
         <a href="https://www.instagram.com/christopher.moussa/?hl=en">
-            <img style="max-width: 30%; max-height: 30%;" src="images/profile_picture.jpg" alt="Profile Picture" id="pic" border="5"/>
+            <img style="max-width: 30%; max-height: 30%;" src="images/grad_photo.JPEG" alt="Profile Picture" id="pic" border="5"/>
         </a>
 
         <div id="contact-info" class="vcard">
@@ -90,6 +90,16 @@
             <dd class="clear"></dd>
             <dt>Education</dt>
             <dd>
+                <h2 class="smartmargin"><strong>University of California, Riverside</strong>Riverside, CA<span>March 2024</span></h2>
+                <ul>
+                    <li>M.S. Engineering (Data Science)</li>
+                    <ul class="inset">
+                        <li>
+                            <a href="thesis.pdf" target="_blank">thesis: Major League Baseball Hall of Fame Prediction Model</a>
+                        </li>
+                    </ul>
+                </ul>
+
                 <h2 class="smartmargin"><strong>San Diego State University</strong>San Diego, CA <span>May 2019</span></h2>
                 <ul>
                     <li>B.S. Computer Science: 3.7/4.0</li>
@@ -173,7 +183,7 @@
             <dd>
                 <h2>
                   <strong>San Diego State University Dean's List</strong>
-                  <span>Fall 2015 - Fall 2018</span>
+                  <span>Fall 2015 - Spring 2019</span>
                 </h2>
                 <h2 class="smartmargin">
                     <strong>LLNL Cyber Defender Poster Presentation Winner</strong>
@@ -193,9 +203,9 @@
 
             <dt>Links</dt>
             <dd class="noprint">
-                <a href="https://github.com/cmoussa1"><span class="octicon octicon-mark-github" style="position: relative; color: black; margin: 3px;"></span>Find Me on GitHub</a>
+                <a href="https://github.com/cmoussa1"><span class="octicon octicon-mark-github" style="position: relative; color: black; margin: 3px;"></span>GitHub</a>
 
-                <a href="https://www.linkedin.com/in/christopher-moussa-b2b73a132/"><i class="fab fa-linkedin-in"></i>LinkedIn Profile</a>
+                <a href="https://www.linkedin.com/in/christopher-moussa-b2b73a132/"><i class="fab fa-linkedin-in"></i>LinkedIn</a>
             </dd>
 
             <dd class="clear"></dd>
@@ -203,7 +213,7 @@
 
         <div class="clear"></div>
 
-        <p class="noprint">Last Updated: July 31st, 2019</p>
+        <p class="noprint">Last Updated: June 12th, 2024</p>
     </div>
 
 </body>
